required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed possible buffer overflow in msTmpFile() (#3484)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text contains a double quote (#3481)

- PHP/MapScript: Expose getGeomTransform/setGeomTransform instead of exposing the private vars for rfc48 (#2825) 

- PHP/MapScript: Fixed updateFromString functions to resolve symbol names (#3273)

- PHP/MapScript: ability to use the php clone keyword (#3472)

- Modified mapserver units enum order to fix some problems with external softwares (#3173)

- Fixed configure does not detect libGD version dependencies (#3478)

- Fixed Drawing inline text not working (bitmap) (#3475)

- ensure well formed XML when msWCSGetCapabilities_CoverageOfferingBrief
  returns MS_FAILURE (#3469)

- Fixed msQueryByRect does not use tolerance (#3453)

- Fixed MapScript processTemplate and processQueryTemplate seg fault (#3468)

- Fixed shapeObj->toWkt() returns single point for multipoint geometry (#2762)

- Fixed Internal server error when Oracle returns ora-28002 code (#3457)

- Fixed PHP/MapScript ms_iogetstdoutbufferbytes() always returning 0 bytes written (#3041)

- MapScript resultsGetShape() method fails with a OracleSpatial layer (#3462)

- PHP/MapScript circular references between objects (#3405) 

- Handle null results with gml:Null/gml:null according to version (#3299)

- Reworked mapfile writing to use helper functions so that core types (e.g. numbers, strings,
  colors, keywords, etc...) are always written consistently.

- Ensure mapwmslayer.c does not unlink file before closing connection on it (#3451)
